<resources>
    <string name="app_name">Void Lite</string>
    <string name="accessibility_service_description">This service is used to lock the phone.</string>
    <string name="accessibility_description">This service is used to lock the phone.</string>
    <string name="back_button">Back btn</string>
    <string name="hidden_apps">Hidden Apps</string>
    <string name="hidden_app_tv">There are no hidden apps.\nAdd unused or less used\napps here, to avoid clutter in\nthe main app drawer.</string>
    <string name="dialog_app_name">App Name</string>
    <string name="app_icon">App icon</string>
    <string name="app_info">App info</string>
    <string name="hide_app">Hide app</string>
    <string name="uninstall">Uninstall</string>
    <string name="total_screen_time_today">Total screen time today:</string>
    <string name="hide_app_name">Hide app name</string>
    <string name="show_app_icon">Show app icon</string>
    <string name="unhide_app">Unhide app</string>
    <string name="remove_permission">Remove permission</string>
    <string name="grant_permission">Grant permission</string>
    <string name="set_as_default_home_screen">Set as default home screen</string>
    <string name="settings">Settings</string>
    <string name="permission_stats">Permission Stats</string>
    <string name="usage_stats">Usage Stats</string>
    <string name="we_need_this_permission_to_display_screen_time_and_app_usages">We need this permission to display screen time and app usages.</string>
    <string name="accessibility">Accessibility</string>
    <string name="we_need_this_permission_to_monitor_app_timers_and_lock_phone">We need this permission to monitor app timers and lock phone.</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="system_default">System Default</string>
    <string name="toggle_visibility">Toggle visibility</string>
    <string name="time_format">--h --m</string>
    <string name="top_5_apps_used_today">Top 5 apps used today:</string>
    <string name="other">Other</string>
    <string name="app_03">App 03</string>
    <string name="app_02">App 02</string>
    <string name="app_01">App 01</string>
    <string name="accessibility_permission">Accessibility Permission</string>
    <string name="we_need_this_permission_to_monitor_app_timers_and_lock_phone_would_you_grant_us_this_permission">We need this permission to monitor app timers and lock phone. Would you grant us this permission?</string>
    <string name="open_accessibility_settings">Open accessibility settings</string>
    <string name="later">Later</string>
    <string name="usage_permission">Usage Permission</string>
    <string name="we_need_this_permission_to_display_screen_time_and_app_usages_would_you_grant_us_this_permission">We need this permission to display screen time and app usages. Would you grant us this permission?</string>
    <string name="open_usage_settings">Open usage settings</string>
    <string name="swipe_right_to_lock_phone">Swipe right to lock phone</string>
    <string name="double_tap_on_mini_app_drawer_to_lock_phone">Double tap on mini app\ndrawer to lock phone</string>
    <string name="new_01">new</string>
    <string name="customization">Customization</string>
    <string name="app_list">App List</string>
    <string name="app_drawer">App Drawer</string>
    <string name="row_size">Row size</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="show_mini_drawer">Show mini drawer</string>
    <string name="show_app_name">Show app name</string>
    <string name="app_count">App count</string>
    <string name="add">Add</string>
    <string name="_0">0</string>
    <string name="remove">Remove</string>
    <string name="apply_theme_for_app_icons">Apply theme for app icons</string>
    <string name="app_icon_shape">App icon shape</string>
    <string name="round">Round</string>
    <string name="squricle">Squricle</string>
</resources>