<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:clipToOutline="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="18dp"
        android:text="@string/usage_permission"
        style="@style/AppTitleText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="18dp"
        android:text="@string/we_need_this_permission_to_display_screen_time_and_app_usages_would_you_grant_us_this_permission"
        style="@style/AppBaseText"/>

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="18dp"
        android:text="@string/open_usage_settings"
        android:textColor="@color/textColorPrimary"
        android:background="@drawable/button_outline_white"/>

    <Button
        android:id="@+id/btnLater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="8dp"
        android:text="@string/later"
        android:textColor="@color/textColorPrimary"
        android:background="@android:color/transparent"/>

</LinearLayout>