<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/permissionsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back_24px"
            app:tint="@color/textColorPrimary" />

        <TextView
            android:id="@+id/textView3"
            style="@style/AppTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/permission_stats"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/textColorPrimary" />

    <TextView
        style="@style/AppTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/usage_stats" />

    <TextView
        style="@style/AppBaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/we_need_this_permission_to_display_screen_time_and_app_usages" />

    <Button
        android:id="@+id/btnOpenUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/grant_permission"
        android:textColor="@color/textColorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:background="@color/divider_grey" />

    <TextView
        style="@style/AppTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/accessibility" />

    <TextView
        style="@style/AppBaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/we_need_this_permission_to_monitor_app_timers_and_lock_phone" />

    <Button
        android:id="@+id/btnOpenAccessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/grant_permission"
        android:textColor="@color/textColorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:background="@color/divider_grey" />

</LinearLayout>