<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/appIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/app_icon"
            android:layout_marginVertical="10dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/appName"
            style="@style/AppBaseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/newText"
            style="@style/AppBaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/new_01"
            android:textColor="@color/new_app_indicator" />

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <View
        android:id="@+id/appView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_grey" />

</LinearLayout>
